force-app/main/default/objects/QCC_Pre_Departure_Event__e/QCC_Pre_Departure_Event__e.object-meta.xml
<CustomObject>
    <label>Pre-Departure Event</label>
    <pluralLabel>Pre-Departure Events</pluralLabel>
</CustomObject>