force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/arrivalLocalDate__c.field-meta.xml
<CustomField>
    <fullName>arrivalLocalDate__c</fullName>
    <label>Arrival Local Date</label>
    <type>Date</type>
</CustomField>