force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/arrivalLocalTime__c.field-meta.xml
<CustomField>
    <fullName>arrivalLocalTime__c</fullName>
    <label>Arrival Local Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>