force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/contactEmailAddrText__c.field-meta.xml
<CustomField>
    <fullName>contactEmailAddrText__c</fullName>
    <description>CRM-9455 This is to receive contact&apos;s email address through platform event</description>
    <label>Contact Email Addr Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>