force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/departureAirportCode__c.field-meta.xml
<CustomField>
    <fullName>departureAirportCode__c</fullName>
    <description>Departure Port (IATA)</description>
    <label>Departure Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>