force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/departureLocalDate__c.field-meta.xml
<CustomField>
    <fullName>departureLocalDate__c</fullName>
    <description>Port local scheduled departure date</description>
    <label>Departure Local Date</label>
    <type>Date</type>
</CustomField>