force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/domesticInternationalInd__c.field-meta.xml
<CustomField>
    <fullName>domesticInternationalInd__c</fullName>
    <description>Domestic or International</description>
    <label>Domestic International Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>