force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/effectiveTierCode__c.field-meta.xml
<CustomField>
    <fullName>effectiveTierCode__c</fullName>
    <label>Effective Tier Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>