force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/eventSubType__c.field-meta.xml
<CustomField>
    <fullName>eventSubType__c</fullName>
    <description>Business Event Sub Category</description>
    <label>Event Sub Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>