force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/eventTimestamp__c.field-meta.xml
<CustomField>
    <fullName>eventTimestamp__c</fullName>
    <description>UTC Timestamp of Event occurence</description>
    <label>Event Timestamp</label>
    <type>DateTime</type>
</CustomField>