force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <description>Passenger First name</description>
    <label>First Name</label>
    <length>56</length>
    <type>Text</type>
</CustomField>