force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <description>Passenger Last name</description>
    <label>Last Name</label>
    <length>57</length>
    <type>Text</type>
</CustomField>