force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/lifetimeMemberTier__c.field-meta.xml
<CustomField>
    <fullName>lifetimeMemberTier__c</fullName>
    <label>Lifetime Member Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>