force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/mealPreferenceCode__c.field-meta.xml
<CustomField>
    <fullName>mealPreferenceCode__c</fullName>
    <label>Meal Preference Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>