force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/namePrefix__c.field-meta.xml
<CustomField>
    <fullName>namePrefix__c</fullName>
    <description>Name Prefix
Ex. DR, MR, MRS etc</description>
    <label>Name Prefix</label>
    <length>12</length>
    <type>Text</type>
</CustomField>