force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/oldCabin__c.field-meta.xml
<CustomField>
    <fullName>oldCabin__c</fullName>
    <description>Cabin prior to upgrade</description>
    <label>Old Cabin</label>
    <length>1</length>
    <type>Text</type>
</CustomField>