force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/operatingCarrierCode__c.field-meta.xml
<CustomField>
    <fullName>operatingCarrierCode__c</fullName>
    <label>Operating Carrier Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>