force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/OperatingFlightNo__c.field-meta.xml
<CustomField>
    <fullName>OperatingFlightNo__c</fullName>
    <label>Operating Flight No</label>
    <length>4</length>
    <type>Text</type>
</CustomField>