force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/passengerTypeCode__c.field-meta.xml
<CustomField>
    <fullName>passengerTypeCode__c</fullName>
    <description>Passenger Type Code (Adult, Child, Infant)</description>
    <label>Passenger Type Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>