force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/previousSegInfo__c.field-meta.xml
<CustomField>
    <fullName>previousSegInfo__c</fullName>
    <description>CRM-9455 This is to receive booking&apos;s previous leg segment code</description>
    <label>Previous Seg Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>