force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/qantasCustId__c.field-meta.xml
<CustomField>
    <fullName>qantasCustId__c</fullName>
    <description>A Unique customer Id assigned by CAP
system for a FF member</description>
    <label>Qantas Customer Id</label>
    <length>24</length>
    <type>Text</type>
</CustomField>