force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/qantasFFNo__c.field-meta.xml
<CustomField>
    <fullName>qantasFFNo__c</fullName>
    <description>Qantas FF number. When less than 10 char,
pre-padded with 0&apos;s to make it a length of 10.</description>
    <label>Qantas FF No</label>
    <length>24</length>
    <type>Text</type>
</CustomField>