force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/reason__c.field-meta.xml
<CustomField>
    <fullName>reason__c</fullName>
    <label>Reason</label>
    <length>30</length>
    <type>Text</type>
</CustomField>