force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/reloc_creationDate__c.field-meta.xml
<CustomField>
    <fullName>reloc_creationDate__c</fullName>
    <description>PNR Creation date</description>
    <label>Reloc Creation Date</label>
    <type>Date</type>
</CustomField>