force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/reservationStatusCode__c.field-meta.xml
<CustomField>
    <fullName>reservationStatusCode__c</fullName>
    <label>Reservation Status Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>