force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/seatNumber__c.field-meta.xml
<CustomField>
    <fullName>seatNumber__c</fullName>
    <description>Seat number, prepadded with 0&apos;s when</description>
    <label>Seat Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>