force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/seatPreferenceCode__c.field-meta.xml
<CustomField>
    <fullName>seatPreferenceCode__c</fullName>
    <label>Seat Preference Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>