force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/specialMeal__c.field-meta.xml
<CustomField>
    <fullName>specialMeal__c</fullName>
    <description>Confirmed Meal service codes (comma
separated)</description>
    <label>Special Meal</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>