force-app/main/default/objects/QCC_Pre_Departure_Event__e/fields/upgradeInd__c.field-meta.xml
<CustomField>
    <fullName>upgradeInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upgrade Indicator</label>
    <type>Checkbox</type>
</CustomField>